# static-code-analyser

./: .gitignore  README.md  a
Team16/Code16/src/autotester/: CMakeLists.txt
Team16/Code16/src/autotester/src/: TestWrapper.cpp  TestWrapper.h
Team16/Code16/src/spa/: CMakeLists.txt
Team16/Code16/src/spa/src/: DesignExtractor.cpp  PKB.cpp  PKB.h  Parser.cpp  TNode.cpp  TNode.h
Team16/Code16/src/spa/src/PKB/: PKB.cpp  PKB.h  pkb.cpp  pkb.h
Team16/Code16/src/spa/src/PKB/API/: ReadFacade.cpp  ReadFacade.h  WriteFacade.cpp  WriteFacade.h  read_facade.cpp  read_facade.h  write_facade.cpp  write_facade.h
Team16/Code16/src/spa/src/PKB/Helper/: StmtEntity.h  Wildcard.h
Team16/Code16/src/spa/src/PKB/Stores/: AssignStore.cpp  AssignStore.h  CallStore.cpp  CallStore.h  ConstantStore.cpp  ConstantStore.h  FollowsStore.cpp  FollowsStore.h  IfStore.cpp  IfStore.h  ModifiesStore.cpp  ModifiesStore.h  NextStore.cpp  NextStore.h  ParentStore.cpp  ParentStore.h  ProcedureStore.cpp  ProcedureStore.h  RelationStore.cpp  RelationStore.h  StatementStore.cpp  StatementStore.h  UsesStore.cpp  UsesStore.h  VariableStore.cpp  VariableStore.h  WhileStore.cpp  WhileStore.h  assign_store.cpp  assign_store.h  call_store.cpp  call_store.h  constant_store.cpp  constant_store.h  follows_store.cpp  follows_store.h  if_store.cpp  if_store.h  next_store.cpp  next_store.h  (+12 more)
Team16/Code16/src/spa/src/QPS/: ClauseBuilder.cpp  ClauseBuilder.h  ClauseDirector.cpp  ClauseDirector.h  PatternClause.h  QueryTokenizer.cpp  QueryTokenizer.h  SelectClause.cpp  SelectClause.h  SelectClauseBuilder.cpp  SelectClauseBuilder.h  SuchThatClause.h
Team16/Code16/src/spa/src/SP/: CPPLINT.cfg  DesignExtractor.cpp  DesignExtractor.h  SPTokeniser.cpp  SPTokeniser.h  SimpleParser.cpp  SimpleParser.h  SourceProcessor.cpp  SourceProcessor.h  TNode.cpp  TNode.h  Token.h  TokenTypes.h  Visitable.h  Visitor.cpp  Visitor.h  design_extractor.cpp  design_extractor.h  source_processor.cpp  source_processor.h  tnode.cpp  tnode.h  visitor.cpp  visitor.h
Team16/Code16/src/spa/src/SP/sp_cfg/: Cfg.cpp  Cfg.h  CfgNode.h  cfg.cpp  cfg.h  cfg_node.h
Team16/Code16/src/spa/src/SP/sp_parser/: AssignmentParser.cpp  AssignmentParser.h  CallParser.cpp  CallParser.h  CloseBraceParser.cpp  CloseBraceParser.h  ConditionParser.cpp  ConditionParser.h  ElseParser.cpp  ElseParser.h  IfParser.cpp  IfParser.h  Parser.cpp  Parser.h  ParserFactory.cpp  ParserFactory.h  PrintParser.cpp  PrintParser.h  ProcedureParser.cpp  ProcedureParser.h  ReadParser.cpp  ReadParser.h  SimpleParser.cpp  SimpleParser.h  WhileParser.cpp  WhileParser.h  assignment_parser.cpp  assignment_parser.h  call_parser.cpp  call_parser.h  close_brace_parser.cpp  close_brace_parser.h  else_parser.cpp  else_parser.h  if_parser.cpp  if_parser.h  parser.cpp  parser.h  parser_factory.cpp  parser_factory.h  (+10 more)
Team16/Code16/src/spa/src/SP/sp_tokeniser/: CPPLINT.cfg  SPTokeniser.cpp  SPTokeniser.h  Token.h  TokenTypes.h  sp_tokeniser.cpp  sp_tokeniser.h  token.h  token_types.h
Team16/Code16/src/spa/src/SP/utils/: CPPLINT.cfg  ParseUtils.cpp  ParseUtils.h  parse_utils.cpp  parse_utils.h
Team16/Code16/src/spa/src/pkb/: pkb.h
Team16/Code16/src/spa/src/pkb/api/: read_facade.cpp  read_facade.h
Team16/Code16/src/spa/src/qps/: CPPLint.cfg  ClauseBuilder.cpp  ClauseBuilder.h  ClauseDirector.h  Declaration.cpp  Declaration.h  DesignEntity.cpp  DesignEntity.h  ParsedQuery.cpp  ParsedQuery.h  PatternClause.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryTokenizer.cpp  SelectClauseBuilder.h  clause.h  clause_builder.h  clause_director.cpp  clause_director.h  constants.h  declaration.cpp  declaration.h  design_entity.cpp  design_entity.h  parsed_query.cpp  parsed_query.h  qps.cpp  qps.h  query_evaluator.cpp  query_evaluator.h  query_parser.cpp  query_parser.h  query_tokenizer.cpp  query_tokenizer.h  rel_ref.cpp  rel_ref.h  select_clause.cpp  select_clause.h  select_clause_builder.cpp  select_clause_builder.h  (+2 more)
Team16/Code16/src/spa/src/qps/clauses/: assign_pattern_evaluator.cpp  assign_pattern_evaluator.h  attr_ref.cpp  attr_ref.h  clause.h  evaluator_util.cpp  evaluator_util.h  pattern_clause.cpp  pattern_clause.h  pattern_validator.cpp  pattern_validator.h  select_clause.cpp  select_clause.h  suchthat_clause.cpp  suchthat_clause.h  with_clause.cpp  with_clause.h
Team16/Code16/src/spa/src/qps/qps_errors/: qps_error.h  qps_semantic_error.cpp  qps_semantic_error.h  qps_syntax_error.cpp  qps_syntax_error.h
Team16/Code16/src/spa/src/qps/qps_validator/: WithClauseSyntaxHandler.cpp  WithClauseSyntaxHandler.h  clause_args_syntax_handler.cpp  clause_args_syntax_handler.h  clause_synonym_semantic_handler.cpp  clause_synonym_semantic_handler.h  declaration_statement_syntax_handler.cpp  declaration_statement_syntax_handler.h  declaration_synonym_semantic_handler.cpp  declaration_synonym_semantic_handler.h  declaration_synonym_syntax_handler.cpp  declaration_synonym_syntax_handler.h  pattern_syn_semantic_handler.cpp  pattern_syn_semantic_handler.h  qps_validator.cpp  qps_validator.h  qps_validator_handler.h  select_statement_syntax_handler.cpp  select_statement_syntax_handler.h  select_synonym_semantic_handler.cpp  select_synonym_semantic_handler.h  (+6 more)
Team16/Code16/src/spa/src/utils/: CPPLint.cfg  Error.cpp  Error.h  StmtEntity.h  algorithm_utils.h  clauses_types.h  entity_types.h  error.cpp  error.h  hash_utils.h  lexical_utils.cpp  lexical_utils.h  statementTypes.h  string_utils.cpp  string_utils.h
Team16/Code16/src/unit_testing/: CMakeLists.txt
Team16/Code16/src/unit_testing/src/: ClauseDirectorTest.cpp  TestAST.cpp  TestClauseDirector.cpp  TestClauseGrouper.cpp  TestClauseSet.cpp  TestQueryParser.cpp  TestQueryTokenizer.cpp  TestSemanticValidator.cpp  TestSimpleParser.cpp  TestStringUtil.cpp  TestTokeniser.cpp  TestWhileParser.cpp  test_constraint_table.cpp
Team16/Code16/src/unit_testing/src/PKB/: AssignStoreTest.cpp  CallStoreTest.cpp  FollowsStoreTest.cpp  ModifiesStoreTest.cpp  PKB.cpp  ParentsStoreTest.cpp  ProcedureStoreTest.cpp  StatementStoreTest.cpp  TestNextStore.cpp  UsesStoreTest.cpp
(+231 files in other folders)
