file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_library(spa ${srcs} ${headers}
        src/qps/query_parser/parsed_query.h
        src/qps/declaration.h
        src/qps/design_entity.cpp
        src/qps/design_entity.h
        src/qps/query_parser/clause_builder/clause_director.cpp
        src/qps/query_parser/clause_builder/clause_director.h
        src/qps/clauses/select_clause.h
        src/qps/query_parser/clause_builder/clause_builder.h
        src/qps/query_parser/clause_builder/select_clause_builder.cpp
        src/qps/query_parser/clause_builder/select_clause_builder.h
        src/qps/query_parser/query_tokenizer/query_tokenizer.cpp
        src/qps/query_parser/query_tokenizer/query_tokenizer.h
        src/qps/query_parser/query_parser.cpp
        src/qps/query_parser/query_parser.h
        src/qps/clauses/clause.h
        src/qps/clauses/select_clause.cpp
        src/qps/query_evaluator/constraint_solver/constraint.h
        src/PKB/PKB.h
        src/qps/clauses/suchthat_clauses/suchthat_clause.cpp
        src/qps/clauses/suchthat_clauses/suchthat_clause.h
        src/qps/query_evaluator/query_evaluator.cpp
        src/qps/query_evaluator/query_evaluator.h
        src/utils/hash_utils.h
        src/PKB/PKB.cpp
        src/PKB/PKB.h
        src/PKB/API/WriteFacade.cpp
        src/PKB/API/WriteFacade.h
        src/PKB/API/ReadFacade.h
        src/PKB/API/ReadFacade.cpp
        src/SP/sp_parser/SimpleParser.h
        src/SP/sp_parser/SimpleParser.cpp
        src/SP/sp_tokeniser/SPTokeniser.cpp
        src/SP/sp_tokeniser/SPTokeniser.h
        src/SP/sp_tokeniser/TokenTypes.h
        src/SP/Visitor.cpp
        src/SP/Visitor.h
        src/SP/DesignExtractor.h
        src/SP/DesignExtractor.cpp
        src/SP/TNode.cpp
        src/SP/sp_tokeniser/Token.h
        src/PKB/PKB.cpp
        src/qps/qps.cpp
        src/qps/qps.h
        src/qps/query_evaluator/constraint_solver/constraint_table.cpp
        src/qps/query_evaluator/constraint_solver/constraint_table.h
        src/utils/Error.cpp
        src/utils/Error.h
        src/qps/qps_errors/qps_error.h
        src/qps/qps_errors/qps_semantic_error.cpp
        src/qps/qps_errors/qps_semantic_error.h
        src/qps/qps_errors/qps_syntax_error.cpp
        src/qps/qps_errors/qps_syntax_error.h
        src/qps/rel_ref.cpp
        src/qps/rel_ref.h
        src/qps/query_parser/clause_builder/suchthat_clause_builder.cpp
        src/qps/query_parser/clause_builder/suchthat_clause_builder.h
        src/PKB/Stores/VariableStore.cpp
        src/PKB/Stores/VariableStore.h
        src/PKB/Stores/ConstantStore.cpp
        src/PKB/Stores/ConstantStore.h
        src/PKB/Stores/AssignStore.cpp
        src/PKB/Stores/AssignStore.h
        src/PKB/Stores/StatementStore.cpp
        src/PKB/Stores/StatementStore.h
        src/PKB/Stores/AssignStore.cpp
        src/PKB/Stores/RelationStore.cpp
        src/PKB/Stores/RelationStore.h
        src/PKB/Stores/FollowsStore.cpp
        src/PKB/Stores/FollowsStore.h
        src/PKB/Stores/CallStore.h
        src/PKB/Stores/CallStore.cpp
        src/utils/Error.cpp
        src/utils/Error.h
        src/qps/qps_errors/qps_error.h
        src/qps/qps_errors/qps_semantic_error.cpp
        src/qps/qps_errors/qps_semantic_error.h
        src/qps/qps_errors/qps_syntax_error.cpp
        src/qps/qps_errors/qps_syntax_error.h
        src/qps/rel_ref.cpp
        src/qps/rel_ref.h
        src/qps/query_parser/clause_builder/suchthat_clause_builder.cpp
        src/qps/query_parser/clause_builder/suchthat_clause_builder.h
        src/PKB/Stores/ParentStore.cpp
        src/PKB/Stores/ParentStore.h
        src/utils/entity_types.h
        src/SP/sp_parser/AssignmentParser.cpp
        src/SP/sp_parser/AssignmentParser.h
        src/SP/sp_parser/ReadParser.cpp
        src/SP/sp_parser/ReadParser.h
        src/SP/sp_parser/ProcedureParser.cpp
        src/SP/sp_parser/ProcedureParser.h
        src/SP/sp_parser/Parser.h
        src/SP/SourceProcessor.h
        src/SP/SourceProcessor.cpp
        src/SP/sp_parser/WhileParser.cpp
        src/SP/sp_parser/WhileParser.h
        src/SP/sp_parser/PrintParser.cpp
        src/SP/sp_parser/PrintParser.h
        src/SP/sp_parser/IfParser.h
        src/SP/sp_parser/IfParser.cpp
        src/SP/sp_parser/CallParser.cpp
        src/SP/sp_parser/CallParser.h
        src/SP/sp_parser/ParserFactory.h
        src/SP/sp_parser/ParserFactory.cpp
        src/SP/sp_parser/CallParser.cpp
        src/SP/sp_parser/CallParser.h
        src/SP/sp_parser/Parser.cpp
        src/SP/sp_parser/ElseParser.cpp
        src/SP/sp_parser/ElseParser.h
        src/SP/sp_parser/CloseBraceParser.cpp
        src/SP/sp_parser/CloseBraceParser.h
        src/SP/sp_cfg/Cfg.cpp
        src/SP/sp_cfg/Cfg.h
        src/SP/sp_cfg/CfgNode.h
        src/qps/clauses/pattern_clauses/pattern_clause.cpp
        src/qps/clauses/pattern_clauses/pattern_clause.h
        src/qps/query_parser/clause_builder/pattern_clause_builder.cpp
        src/qps/query_parser/clause_builder/pattern_clause_builder.h
        src/utils/string_utils.cpp
        src/utils/string_utils.h
        src/utils/lexical_utils.cpp
        src/utils/lexical_utils.h
        src/qps/constants.h
        src/qps/query_parser/QueryUtil.cpp
        src/qps/query_parser/QueryUtil.h
        src/SP/utils/ParseUtils.cpp
        src/SP/utils/ParseUtils.h
        src/utils/clauses_types.h
        src/qps/clauses/suchthat_clauses/suchthat_clauses_all.h
        src/qps/clauses/suchthat_clauses/uses.cpp
        src/qps/clauses/suchthat_clauses/uses.h
        src/qps/clauses/suchthat_clauses/modifies.cpp
        src/qps/clauses/suchthat_clauses/modifies.h
        src/qps/clauses/suchthat_clauses/parent.cpp
        src/qps/clauses/suchthat_clauses/parent.h
        src/qps/clauses/suchthat_clauses/follows.cpp
        src/qps/clauses/suchthat_clauses/follows.h
        src/qps/clauses/suchthat_clauses/suchthat_validator.cpp
        src/qps/clauses/suchthat_clauses/suchthat_validator.h
        src/qps/query_evaluator/uses_evaluator.cpp
        src/qps/query_evaluator/uses_evaluator.h
        src/qps/query_evaluator/modifies_evaluator.cpp
        src/qps/query_evaluator/modifies_evaluator.h
        src/qps/query_evaluator/follows_evaluator.cpp
        src/qps/query_evaluator/follows_evaluator.h
        src/qps/query_evaluator/parent_evaluator.cpp
        src/qps/query_evaluator/parent_evaluator.h
        src/qps/clauses/pattern_clauses/pattern_validator.cpp
        src/qps/clauses/pattern_clauses/pattern_validator.h
        src/PKB/Stores/ProcedureStore.cpp
        src/PKB/Stores/ProcedureStore.cpp
        src/qps/query_evaluator/evaluator_util.cpp
        src/qps/query_evaluator/evaluator_util.h
        src/qps/query_evaluator/assign_pattern_evaluator.cpp
        src/qps/query_evaluator/assign_pattern_evaluator.h
        src/PKB/Stores/IfStore.cpp
        src/PKB/Stores/IfStore.h
        src/PKB/Stores/WhileStore.cpp
        src/PKB/Stores/WhileStore.h
        src/qps/qps_validator/qps_validator_handler.h
        src/qps/qps_validator/qps_validator.cpp
        src/qps/qps_validator/qps_validator.h
        src/qps/qps_validator/statement_syntax_handler.cpp
        src/qps/qps_validator/statement_syntax_handler.h
        src/qps/qps_validator/declaration_statement_syntax_handler.cpp
        src/qps/qps_validator/declaration_statement_syntax_handler.h
        src/qps/qps_validator/declaration_synonym_syntax_handler.cpp
        src/qps/qps_validator/declaration_synonym_syntax_handler.h
        src/qps/qps_validator/declaration_synonym_semantic_handler.cpp
        src/qps/qps_validator/declaration_synonym_semantic_handler.h
        src/qps/qps_validator/select_statement_syntax_handler.cpp
        src/qps/qps_validator/select_statement_syntax_handler.h
        src/qps/qps_validator/select_synonym_syntax_handler.cpp
        src/qps/qps_validator/select_synonym_syntax_handler.h
        src/qps/qps_validator/select_synonym_semantic_handler.cpp
        src/qps/qps_validator/select_synonym_semantic_handler.h
        src/qps/qps_validator/clause_args_syntax_handler.cpp
        src/qps/qps_validator/clause_args_syntax_handler.h
        src/qps/qps_validator/clause_synonym_semantic_handler.cpp
        src/qps/qps_validator/clause_synonym_semantic_handler.h
        src/qps/clauses/suchthat_clauses/calls.cpp
        src/qps/clauses/suchthat_clauses/calls.h
        src/qps/query_evaluator/calls_evaluator.cpp
        src/qps/query_evaluator/calls_evaluator.h
        src/qps/clauses/suchthat_clauses/next.cpp
        src/qps/clauses/suchthat_clauses/next.h
        src/qps/clauses/suchthat_clauses/affects.cpp
        src/qps/clauses/suchthat_clauses/affects.h
        src/qps/qps_validator/pattern_syn_semantic_handler.cpp
        src/qps/qps_validator/pattern_syn_semantic_handler.h
        src/qps/qps_validator/select_tuple_synonym_semantic_handler.cpp
        src/qps/qps_validator/select_tuple_synonym_semantic_handler.h
        src/qps/query_evaluator/constraint_solver/clause_group.cpp
        src/qps/query_evaluator/constraint_solver/clause_group.h
        src/qps/query_evaluator/constraint_solver/clause_grouper.cpp
        src/qps/query_evaluator/constraint_solver/clause_grouper.h
        src/PKB/Stores/NextStore.cpp
        src/PKB/Stores/NextStore.h
        src/qps/query_evaluator/if_evaluator.cpp
        src/qps/query_evaluator/if_evaluator.h
        src/qps/query_evaluator/while_evaluator.cpp
        src/qps/query_evaluator/while_evaluator.h
        src/qps/query_evaluator/next_evaluator.h
        src/qps/query_evaluator/next_evaluator.cpp
        src/qps/clauses/with_clauses/with_clause.h
        src/qps/clauses/with_clauses/with_clause.cpp
        src/qps/query_parser/clause_builder/with_clause_builder.cpp
        src/qps/query_parser/clause_builder/with_clause_builder.h
        src/qps/qps_validator/WithClauseSyntaxHandler.cpp
        src/qps/qps_validator/WithClauseSyntaxHandler.h
        src/qps/clauses/attr_ref.h
        src/qps/clauses/attr_ref.cpp
        src/qps/query_evaluator/with_evaluator.cpp
        src/qps/query_evaluator/with_evaluator.h
        src/utils/algorithm_utils.h
)
# this makes the headers accessible for other projects which uses spa lib
target_include_directories(spa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)


